tinyoauth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyoauth
  namespace: tinyoauth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tinyoauth
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
